More rendering improvements, remoted traces of unused javascript file

--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@ Warning: This website is currently still in development and is unfinished.
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
 
-    <script src="./js/resizing.js" defer></script>
-
     <title>Ewan Fabiani | Software Developer Portfolio</title>
 </head>
 <body>
@@ -76,7 +74,7 @@ Warning: This website is currently still in development and is unfinished.
                     <span class="project-separator">—</span>
                     <span class="project-name">FurCloud</span>
                 </div>
-                <img src="assets/projects/furcloud.png" draggable="false" class="project-icon" alt="FurCloud Logo">
+                <img src="assets/projects/furcloud.webp" draggable="false" class="project-icon" alt="FurCloud Logo">
                 <div class="project-body">
                     Server hosting provider with a focus on security and performance.
                 </div>
@@ -116,7 +114,7 @@ Warning: This website is currently still in development and is unfinished.
 
         <div class="languages-container">
             <div class="language">
-                <img src="assets/languages/java.png" class="language-icon" draggable="false" alt="Java Logo">
+                <img src="assets/languages/java.webp" class="language-icon" draggable="false" alt="Java Logo">
                 <div class="language-footer">
                     <div class="language-name">Java</div>
                 </div>
@@ -128,14 +126,14 @@ Warning: This website is currently still in development and is unfinished.
                 </div>
             </div>
             <div class="language">
-                <img src="assets/languages/javascript.png" class="language-icon" draggable="false" alt="Javascript Logo" style="border-radius: 50px;">
+                <img src="assets/languages/javascript.webp" class="language-icon" draggable="false" alt="Javascript Logo" style="border-radius: 50px;">
                 <div class="language-footer">
                     <div class="language-name">JavaScript</div>
                 </div>
             </div>
 
             <div class="language">
-                <img src="assets/languages/sql.png" class="language-icon" draggable="false" alt="SQL Logo">
+                <img src="assets/languages/sql.webp" class="language-icon" draggable="false" alt="SQL Logo">
                 <div class="language-footer">
                     <div class="language-name">SQL</div>
                 </div>
