Corrected aspect ratios, even more efficiency improvements.

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ Warning: This website is currently still in development and is unfinished.
             </a>
 
             <a class="technology" target="_blank" href="https://www.docker.com/">
-                <img src="assets/technologies/docker.webp" class="technology-icon" draggable="false" alt="Docker Logo" style="width: 130px;">
+                <img src="assets/technologies/docker.webp" class="technology-icon" draggable="false" alt="Docker Logo" style="width: 130px; height: 93px; margin-bottom: 27px; margin-top: 10px;">
                 <div class="technology-name">Docker</div>
             </a>
 
@@ -179,7 +179,7 @@ Warning: This website is currently still in development and is unfinished.
             </a>
 
             <a class="technology" target="_blank" href="https://www.selenium.dev/">
-                <img src="assets/technologies/selenium.webp" class="technology-icon" draggable="false" alt="Selenium Logo">
+                <img src="assets/technologies/selenium.webp" class="technology-icon" draggable="false" alt="Selenium Logo" style="width: 105px;">
                 <div class="technology-name">Selenium</div>
             </a>
 
@@ -209,7 +209,7 @@ Warning: This website is currently still in development and is unfinished.
             </a>
 
             <a class="technology" target="_blank" href="https://www.linux.org/">
-                <img src="assets/technologies/linux.webp" class="technology-icon" draggable="false" alt="Linux Logo">
+                <img src="assets/technologies/linux.webp" class="technology-icon" draggable="false" alt="Linux Logo" style="width: 100px;">
                 <div class="technology-name">Linux</div>
             </a>
     
