Testing otimizations of font loading & other small optimizations

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ Warning: This website is currently still in development and is unfinished.
     <link href="./css/skills.css" rel="stylesheet" type="text/css">
     <!--<link href="./css/sandbox.css" rel="stylesheet" type="text/css">-->
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload" href="https://fonts.googleapis.com">
+    <link rel="preload" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
 
@@ -215,8 +215,6 @@ Warning: This website is currently still in development and is unfinished.
     
 
         </div>
-
-        
 
     </div>
 
