Added meta description, another test to optimize page load

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ Warning: This website is currently still in development and is unfinished.
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Discover Ewan Fabiani's projects, a backend developer specializing in Java and Python.">
 
     <link href="./css/style.css" rel="stylesheet" type="text/css">
     <link href="./css/home.css" rel="stylesheet" type="text/css">
@@ -25,8 +26,8 @@ Warning: This website is currently still in development and is unfinished.
 
     <link rel="preload" href="https://fonts.googleapis.com">
     <link rel="preload" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" as="style">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet" as="style">
 
     <title>Ewan Fabiani | Software Developer Portfolio</title>
 </head>
