--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ Warning: This website is currently still in development and is unfinished.
 
     <link rel="preload" href="https://fonts.googleapis.com">
     <link rel="preload" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" as="style">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet" as="style">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="preload" as="style">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="preload" as="style">
 
     <title>Ewan Fabiani | Software Developer Portfolio</title>
 </head>
