Added express.js to technologies, updated node to node.js

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ Warning: This website is currently still in development and is unfinished.
 
             <a class="technology" target="_blank" href="https://nodejs.org/">
                 <img src="assets/technologies/node.webp" class="technology-icon" draggable="false" alt="Node.js Logo">
-                <div class="technology-name">Node</div>
+                <div class="technology-name">Node.js</div>
             </a>
 
             <a class="technology" target="_blank" href="https://maven.apache.org/">
@@ -213,7 +213,11 @@ Warning: This website is currently still in development and is unfinished.
                 <img src="assets/technologies/linux.webp" class="technology-icon" draggable="false" alt="Linux Logo" style="width: 100px;">
                 <div class="technology-name">Linux</div>
             </a>
-    
+
+            <a class="technology" target="_blank" href="https://www.linux.org/">
+                <img src="assets/technologies/express.webp" class="technology-icon" draggable="false" alt="Linux Logo" style="height:33px; margin-top: 50px; margin-bottom: 47px;">
+                <div class="technology-name">Express.js</div>
+            </a>
 
         </div>
 
