--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@ Warning: This website is currently still in development and is unfinished.
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="preload" as="style">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="preload" as="style">
 
+    <link rel="icon" href="assets/misc/favicon.webp" type="image/png">
+
     <title>Ewan Fabiani | Software Developer Portfolio</title>
 </head>
 <body>
