Added warning on website

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@ Warning: This website is currently still in development and is unfinished.
     <title>Ewan Fabiani | Software Developer Portfolio</title>
 </head>
 <body>
+    <div class="in-dev-warning">
+        <div class="in-dev-warning-text">This website is currently still in development and is unfinished.</div>
+    </div>
     <div class="home">
         <div class="introduction">
             <h1 class="greeting">
